collective.markitup
===================

0.1 - Unreleased
----------------

 - Got the images to appear in the editor. archetypes_tool doesn't want to 
   give me a usable page from a UID, so I hacked a view that gives a 301
   for any given UID that points to a real page. Not ideal, but at least now
   the image button actually works.
   [msmith64]

 - Got the plonefinder to show images. ("url" selectiontype broken: Must use
   uid.)
 - Create the Javascript override for plonefinder's Browser.selectItem
 - Much cleaner subclass of Finder.
   [msmith64]

 - Added documentation to init.js.
 - Wrapper to hide the ugly loop that MarkItUp requires in order to
   override individual buttons.
   [msmith64]

 - Much cleaner way of doing the transforms for previews.
   Safe, fast, and readable. MarkUpSet directories have to be named after
   the subtype (secondhalf of the mimetype).
   [msmith64]

 - Improved preview styles by adding <div id="content"/> around the
   content to be previewed.
   [msmith64]

 - Improved preview styles even more so that they don't need HTTP requests.
   Now the only crappiness is the amount of Javascript needed to get it done.
   [msmith64]

 - Improved preview styles so loading them isn't quite as crappy.
   Still crappy though
 - Some cleanup/whitespace pedantry
   [msmith64]

 - Depends on collective.plonefinder
   [msmith64]

 - Added a somewhat crappy way to apply the page styles to the preview.
   It's crappy, but it's faster that causing Plone to load a full-template
   page.
   [msmith64]

 - Used portal_url defined in plone_javascript_variables.js to find root path
   to objects.
   [msmith64]
 
 - Removed unneeded template.
 - Previewer can pick between reStructuredText, Markdown, Textile,
   (and HTML, which is a no-op).
 - Auto-loads based on chosen content-type.
 - Needed resources load on-the-fly, so very little needs to be in the Plone
   registries.
 - Added plugins for Textile and Rest as well as more robust HTML.