@@ -4,6 +4,9 @@ collective.markitup
 0.1 - Unreleased
 ----------------
 
+ - Browse to add links via the finder; however, now I have to go back
+   and figure out how folks can add external links, too.
+
  - Got the images to appear in the editor. archetypes_tool doesn't want to 
    give me a usable page from a UID, so I hacked a view that gives a 301
    for any given UID that points to a real page. Not ideal, but at least now
